--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,3 +1,13 @@
 <web-app version="3.1">
   <display-name>Archetype Created Web Application</display-name>
+
+  <error-page>
+    <location>/jsp/error.jsp</location>
+  </error-page>
+
+  <error-page>
+    <!-- Missing resource -->
+    <error-code>404</error-code>
+    <location>/jsp/error_404.jsp</location>
+  </error-page>
 </web-app>
