--- a/pom.xml
+++ b/pom.xml
@@ -35,13 +35,7 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
-    <!--    &lt;!&ndash; https://mvnrepository.com/artifact/javax.servlet/servlet-api &ndash;&gt;
-        <dependency>
-          <groupId>javax.servlet</groupId>
-          <artifactId>servlet-api</artifactId>
-          <version>2.5</version>
-          <scope>provided</scope>
-        </dependency>-->
+
     <dependency>
       <groupId>javax</groupId>
       <artifactId>javaee-api</artifactId>
@@ -68,8 +62,13 @@
     <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.10.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
-      <version>2.9.1</version>
+      <version>2.10.0</version>
     </dependency>
 
     <dependency>
@@ -79,16 +78,14 @@
       <scope>provided</scope>
     </dependency>
 
+
+    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-web -->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
+      <artifactId>log4j-web</artifactId>
       <version>2.10.0</version>
     </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>2.10.0</version>
-    </dependency>
+
   </dependencies>
 
 
